# mlflow-practice

./: .gitignore  mlflow-tracking-server.sh  pyproject.toml
mlruns/0/: meta.yaml
mlruns/880251829506056537/: meta.yaml
mlruns/880251829506056537/1d3404ebe12944e396bd82cfdff5d094/: meta.yaml
mlruns/880251829506056537/1d3404ebe12944e396bd82cfdff5d094/metrics/: mae  mse  r2  rmse
mlruns/880251829506056537/26f9d2fd034d45b19cc1ec9c31407c77/: meta.yaml
mlruns/880251829506056537/26f9d2fd034d45b19cc1ec9c31407c77/metrics/: mae  mse  r2  rmse
mlruns/880251829506056537/39a3e53776bc4c67b9b36069e5cacdda/: meta.yaml
mlruns/880251829506056537/39a3e53776bc4c67b9b36069e5cacdda/metrics/: mae  mse  r2  rmse
mlruns/880251829506056537/535b26d6cf26484da06ba30a4d516c47/: meta.yaml
mlruns/880251829506056537/535b26d6cf26484da06ba30a4d516c47/metrics/: mae  mse  r2  rmse
mlruns/880251829506056537/721485df6fac4ab6be6bc934a188516c/: meta.yaml
mlruns/880251829506056537/721485df6fac4ab6be6bc934a188516c/metrics/: mae  mse  r2  rmse
mlruns/880251829506056537/c214da4169ba45168920c719bf21ebf3/: meta.yaml
mlruns/880251829506056537/c214da4169ba45168920c719bf21ebf3/metrics/: mae  (+3 more)
mlruns/880251829506056537/c56e8b424ddc4b2fb330e1f0e0ddf2ed/: meta.yaml
mlruns/880251829506056537/e8eaaefb023f4ab7a175529fdec338b5/: meta.yaml
mlruns/models/apple_sales_model/: meta.yaml
mlruns/models/apples_rf_test/: meta.yaml
src/: generate_data.py  hyper_parameter_tuning.ipynb  main.py  tracking_mlflow.py
src/deep_learning/: quick_start.py
src/model_registry/: load_model.py  register_model.py
(+76 files in other folders)
